# scicode

./: README.md
client/: .env.example  Cargo.toml  Trunk.toml  Trunk.win.toml  index.html  tailwind.config.js
client/src/: base.css  index.scss  main.rs  tailwind.css
client/src/components/: button.rs  markdown.rs  mod.rs
client/src/components/icon/: github.rs
client/src/pages/: create_post.rs  create_topic.rs  home.rs  mod.rs  post.rs  sign_in.rs  sign_up.rs  topic.rs  user.rs
client/src/utils/: get_origin.rs  get_token.rs  mod.rs  request.rs  stroage.rs
server/: .env.example  Cargo.toml
server/migrations/2022-02-03-160926_create_posts/: down.sql  up.sql
server/migrations/2022-02-24-163004_update_user/: down.sql  up.sql
server/src/: auth.rs  db.rs  main.rs  models.rs  schema.rs
server/src/services/: comments.rs  create_post.rs  create_topic.rs  delete_post.rs  login_oauth.rs  mod.rs  post.rs  post_comment.rs  posts.rs  sign_in.rs  sign_up.rs  topics.rs  user.rs  vote.rs
