[package]
edition = "2021"
name = "client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.6"
reqwest = {version = "0.11", features = ["json"]}
wasm-bindgen-futures = "0.4.29"
web-sys = "0.3"
yew = {git = "https://github.com/yewstack/yew/"}
