[package]
edition = "2021"
name = "client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.19", features = ["serde", "wasmbind"]}
gloo = "0.6"
markdown = "0.3"
reqwest = {version = "0.11", features = ["json"]}
serde = "1"
wasm-bindgen-futures = "0.4.29"
web-sys = "0.3"
yew = "0.19.3"
yew-router = "0.16"
