[package]
edition = "2021"
name = "server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5"
actix-web = "3"
diesel = {version = "1", features = ["postgres", "r2d2"]}
dotenv = "0.15"
lazy_static = "1"
r2d2 = "0.8.9"
serde = "1"
