[package]
edition = "2021"
name = "server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5"
actix-web = "3"
chrono = {version = "0.4.19", features = ["serde"]}
diesel = {version = "1", features = ["postgres", "r2d2", "chrono"]}
dotenv = "0.15"
jsonwebtoken = "8"
lazy_static = "1"
nanoid = "0.4.0"
r2d2 = "0.8.9"
rust-argon2 = "1.0"
rust_decimal = {version = "1.21.0", features = ["maths"]}
serde = "1"
