[package]
edition = "2021"
name = "scicode_server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-utils = "3"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15"
jsonwebtoken = "8"
nanoid = "0.4.0"
once_cell = "1.10.0"
r2d2 = "0.8.9"
reqwest = { version = "0.11", features = ["json"] }
rust-argon2 = "1.0"
rust_decimal = { version = "1.21.0", features = ["maths"] }
serde = "1.0"
serde_json = "1.0"
